// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props markdown 1`] = `
<div
  className="kbnMarkdown__body"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>I am <em>some</em> <a href=\\"https://en.wikipedia.org/wiki/Content\\">content</a> with <code>markdown</code></p>
",
    }
  }
/>
`;

exports[`props openLinksInNewTab 1`] = `
<div
  className="kbnMarkdown__body"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>I am <em>some</em> <a href=\\"https://en.wikipedia.org/wiki/Content\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">content</a> with <code>markdown</code></p>
",
    }
  }
/>
`;

exports[`props whiteListedRules 1`] = `
<div
  className="kbnMarkdown__body"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>I am <em>some</em> [content](https://en.wikipedia.org/wiki/Content) with <code>markdown</code></p>
",
    }
  }
/>
`;

exports[`render 1`] = `
<div
  className="kbnMarkdown__body"
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
/>
`;

exports[`should never render html tags 1`] = `
<div
  className="kbnMarkdown__body"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>&lt;div&gt;I may be dangerous if rendered as html&lt;/div&gt;</p>
",
    }
  }
/>
`;
